--- a/app/index.html
+++ b/app/index.html
@@ -241,6 +241,7 @@
                 </div>
               </div>
             </div>
+
             <div class="col_right">
               <div class="span-5 pre last">
                 <div class="box">
@@ -277,6 +278,17 @@
               </div>
             </div>
           </div>
+           <div class="sponsors">
+                <a class="sponsor-1" href="http://www.xwerx.com/"></a>
+                <a class="sponsor-2" href=""></a>
+                <a class="sponsor-3" href=""></a>
+                <a class="sponsor-4" href=""></a>
+                <a class="sponsor-5" href=""></a>
+                <a class="sponsor-6" href=""></a>
+                <a class="sponsor-7" href=""></a>
+                <a class="sponsor-8" href=""></a>
+                <a class="sponsor-9" href=""></a>
+              </div>
         </div>
       </div>
     </div>
