--- a/app/index.html
+++ b/app/index.html
@@ -278,17 +278,40 @@
               </div>
             </div>
           </div>
-           <div class="sponsors">
-                <a class="sponsor-1" href="http://www.xwerx.com/"></a>
-                <a class="sponsor-2" href=""></a>
-                <a class="sponsor-3" href=""></a>
-                <a class="sponsor-4" href=""></a>
-                <a class="sponsor-5" href=""></a>
-                <a class="sponsor-6" href=""></a>
-                <a class="sponsor-7" href=""></a>
-                <a class="sponsor-8" href=""></a>
-                <a class="sponsor-9" href=""></a>
-              </div>
+          <div class="sponsors">
+                <a href="http://www.xwerx.com/">
+                  <img alt="Xwerx" src="./images/logos/logos/xwerx.png">
+                </a>
+
+                <a href="https://www.swrve.com/">
+                  <img alt="Swrve" src="./images/logos/logos/swrve.png">
+                </a>
+
+                <a href="http://www.uxtraining.ie/">
+                  <img alt="UX Training" src="./images/logos/logos/uxtraining.png">
+                </a>
+
+                <a href="http://www.designweek.ie/">
+                  <img alt="Designweek logo" src="./images/logos/logos/design_week.png">
+                </a>
+
+                <a href="https://www.iterate.ie/">
+                  <img alt="Iterate" src="./images/logos/logos/iterate.png">
+                </a>
+
+                <a href="http://www.frontend.com">
+                  <img alt="Frontend Logo" src="./images/logos/logos/frontend.png">
+                </a>
+
+                <a href="http://ignite.oreilly.com/">
+                  <img alt="Ignite Logo" src="./images/logos/logos/ignite.png">
+                </a>
+                
+                <a href="http://www.jamesonwhiskey.com/ie/">
+                  <img alt="Jameson" src="./images/logos/logos/Jameson.png">
+                </a>
+
+          </div>
         </div>
       </div>
     </div>
